update pom.xml for java 11